--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://medium.com/@aaaanchakure", "https://hackernoon.com/u/afroz-chakure", "https://www.geeksforgeeks.org/introduction-to-docker/"
+          feed_list: "https://medium.com/@aaaanchakure", "https://hackernoon.com/u/afroz-chakure"
