--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -13,4 +13,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://medium.com/feed/@aaaanchakure", "https://www.hardtasksin.wordpress.com/feed/""
+          comment_tag_name: Medium
+          feed_list: "https://medium.com/feed/@aaaanchakure", "https://www.hardtasksin.wordpress.com/feed/"
+
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          comment_tag_name: Hacker Noon
+          feed_list: "https://hackernoon.com/feed/@afroz-chakure"
+          
