--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -2,7 +2,7 @@ name: Latest blog post workflow
 on:
   schedule:
     # Runs every hour
-    - cron: '0 * * * * * * * * *'
+    - cron: '0 * * * *'
   workflow_dispatch:  
 
 jobs:
@@ -15,3 +15,4 @@ jobs:
         with:
           comment_tag_name: Medium
           feed_list: "https://medium.com/feed/@aaaanchakure"
+          max_post_count: 10
